# libsigopt

./: .flake8  .gitignore  .pre-commit-config.yaml  PACKAGE.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: tests.yml
libsigopt/aux/: adapter_info_containers.py  constant.py  errors.py  geometry_utils.py  multimetric.py  samplers.py  utils.py  validate_schema.py
libsigopt/compute/: acquisition_function.py  acquisition_function_optimization.py  covariance.py  covariance_base.py  domain.py  expected_improvement.py  gaussian_process.py  gaussian_process_sum.py  log_likelihood.py  multitask_acquisition_function.py  multitask_covariance.py  optimization.py  optimization_auxiliary.py  predictor.py  probabilistic_failures.py  python_utils.py  search.py  sigopt_parzen_estimator.py  vectorized_optimizers.py
libsigopt/compute/misc/: constant.py  data_containers.py  multimetric.py
libsigopt/views/: view.py
libsigopt/views/rest/: gp_ei_categorical.py  gp_hyper_opt_multimetric.py  gp_next_points_categorical.py  multisolution_best_assignments.py  random_search_next_points.py  search_next_points.py  spe_next_points.py  spe_search_next_points.py
test/testaux/: constraints_test.py  geometry_utils_test.py  multimetric_test.py  numerical_test.py  numerical_test_case.py  samplers_test.py  utils.py  utils_test.py  validate_schema_test.py
test/testcompute/: conftest.py  covariance_test.py  domain_test.py  expected_improvement_test.py  fixed_parameters_optimization_test.py  gaussian_process_sum_test.py  gaussian_process_test.py  gaussian_process_test_case.py  gp_test_utils.py  log_likelihood_test.py  multitask_af_test.py  optimization_test.py  probabilistic_failures_test.py  python_utils_test.py  search_test.py  spe_test.py  vectorized_optimizers_test.py
test/testcompute/misc/: metric_midpoint_info_test.py  multimetric_filtering_test.py
test/testviews/: conftest.py  view_test.py  zigopt_input_utils.py
test/testviews/rest/: gp_ei_test.py  gp_hyper_opt_test.py  gp_next_points_test.py  multisolution_best_assignments_test.py  random_search_next_points_test.py  search_next_points_test.py  spe_next_points_test.py  spe_search_next_points_test.py
