[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libsigopt"
version = "1.0.0"
description = "SigOpt computation libraries"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "SigOpt", email = "support@sigopt.com" }]
classifiers = ["Development Status :: 5 - Production/Stable"]
dependencies = ["numpy>=2.1", "scipy>=1.14"]

[project.urls]
Homepage = "https://sigopt.org"

[dependency-groups]
dev = ["pre-commit==3.2.1", "pytest", "pytest-rerunfailures", "ruff", "ty"]

[tool.setuptools.packages.find]
include = ["libsigopt*"]
exclude = ["test*"]

[tool.setuptools.package-data]
libsigopt = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# E: pycodestyle
# F: Pyflakes
# I: isort
# W: pycodestyle warnings
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501", "E731", "E741", "F401", "F403", "F405"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["libsigopt"]
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
  "tests",
]

[tool.ruff.lint.isort.sections]
tests = ["testaux", "testcompute"]
[tool.ty.src]
include = ["libsigopt/aux", "test/testaux"]
